--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.1.0
-Flask-SocketIO==5.1.1
-Flask-CORS==3.0.10
-python-dotenv==0.19.1
+Flask==2.3.0
+Werkzeug==2.2.2
+Flask-SocketIO==5.3.0
+Flask-Cors==3.1.1
+python-dotenv==1.0.0
